# EEG_Cursor

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/bciprototype/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/cpp/: CMakeLists.txt  bcicore.cpp
app/src/main/cpp/buffers/: DecodeWindow.h  EegSample.h  IntentBuffer.h  RingBuffer.cpp  RingBuffer.h
app/src/main/cpp/core/: BciEngine.cpp  BciEngine.h
app/src/main/cpp/entry/: jni_entry.cpp  native_api.h
app/src/main/cpp/platform/: AndroidLog.cpp  AndroidLog.h  TreadUtils.h
app/src/main/cpp/state/: NativeState.h  NativeStateMachine.cpp  NativeStateMachine.h
app/src/main/cpp/threads/: CursorIntent.h  DecodeThread.cpp  DecodeThread.h  InputThread.cpp  InputThread.h  OuputThread.h  OutputThread.cpp  OutputThread.h
app/src/main/cpp/timing/: Clock.cpp  Clock.h  TimingBudget.h
app/src/main/java/com/example/bciprototype/: BciViewModel.kt  MainActivity.kt
app/src/main/java/com/example/bciprototype/lifecycle/: NativeBridge.kt
app/src/main/java/com/example/bciprototype/ui/: BciRoot.kt  CursorView.kt  DebugPanel.kt
app/src/main/java/com/example/bciprototype/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/bciprototype/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
